--- a/src/index.scss
+++ b/src/index.scss
@@ -1,83 +1,16 @@
 
-.musicaespera{
-  width: 100%;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  margin: 25px;
+}
 
-  .pagination
-  {
-  width: 100%;
- 
-   display: flex;
-   justify-content: center;
+select {
+  font-family: 'FontAwesome', 'Second Font name';
+  font-weight: 600;
   
   }
-
-  .meLista{
-
-    tr{
-      border: 1px solid #c6c6c6;
-    }
-
-   td{
-     
-    .posicion{
-      background-color: purple;
-      color: white;
-      width: 30px;
-      height: 30px;
-      line-height: 30px;
-      border-radius: 50%;
-      margin: auto;
-    }
-    .nombre{
-      font-weight: 700;
-
-    }
-   }
-  }
-}
-
-
-
-.item {
  
-  border: 1px solid #999999;
-  border-radius: 6px;
-  margin-bottom: 10px;
-  padding: 10px;
-  padding-left: 8px;
-  opacity: 1;
-
-  cursor: pointer;
-
-  .title {
-    font-weight: bold;
-    font-size: 125%;
-    margin: 0;
-    margin-bottom: 0.3rem;
-  }
-
-  .body {
-    margin: 0;
-    margin-bottom: 0.3rem;
-  }
-  
-  .small {
-    font-size: 66%;
-    text-align: right;
-  }
-}
-
-.dragged .item {
-  opacity: 0.25;
-  border-top: 1px solid #999999;
-  border-bottom: 1px solid #ffffff;
-}
-
-.floating .item {
-  background-color: #ffffff;
-  box-shadow: 0 4px 20px #666666;
-}
-
-.dl-item.floating {
-  width: 85%;
-}
